updated parse timestamp tracking

--- a/views/test.html
+++ b/views/test.html
@@ -91,6 +91,7 @@
             latitude: lat,
             longitude: lon,
             authToken: authToken,
+            name: 'university of Pennsylvania'
         }, function(data) {
             console.log(data);
         }, 'json');
