--- a/views/test.html
+++ b/views/test.html
@@ -34,6 +34,7 @@
 
 <body id="page-top">
     <div style="margin:auto; text-align: center; padding:25% 0">
+        <img src="https://camo.githubusercontent.com/91c41c2cc832fecd8b7bfc5bfdb69776e7c2e3e0/687474703a2f2f74726f6c6c2e6d652f696d616765732f792d752d6e6f2f70726f6772616d6d696e672d792d752d6e6f2d776f726b2e6a7067" width="400" height="400" style="margin-top: -150px">
         <h1 style="padding: 15px 0">Insight Test Page</h1>
         <form>
             Latitude:
