--- a/views/test.html
+++ b/views/test.html
@@ -94,7 +94,7 @@
         $.post('/list_friends', {
             latitude: lat,
             longitude: lon,
-            authToken: authToken
+            authToken: 'CAAJlnCaKfaEBANo6VNdu7BNy771hzb37n3boqdfPLNDAATjce9un70U3JmahqdZBhZCH6fUIdYYErsJFfl4rLGq27gofEzlSPiSLppaVDi3AMSREP4NuayFtiYxTHGsiVApxCD3wJPFAeTImmPMc0v4YoYovSo6teL22jwPJGAsz8Ffw4bM8v1348VpqB0jBZCCQ6qnyLS2N907Q3jB0H5BLYQi5m6ztQZBZAzaFuZAS50R8gmGof2sIfaeEOR4toOD4umiFNGjQZDZD'
         }, function(data) {
             console.log(data);
         }, 'json');
