parse check in tracking

--- a/views/test.html
+++ b/views/test.html
@@ -77,7 +77,7 @@
     $('#checkin-test').on('click', function(e) {
         var lat = Number($('#lat').val());
         var lon = Number($('#long').val());
-        var authTokenTest = Jacob;
+        var authTokenTest = Krishna;
         $.post('/fb_checkin', {
             latitude: lat,
             longitude: lon,
@@ -90,7 +90,7 @@
     $('#fb-test').on('click', function(e) {
         var lat = Number($('#lat').val());
         var lon = Number($('#long').val());
-        var authToken = Jacob;
+        var authToken = Krishna;
         $.post('/list_friends', {
             latitude: lat,
             longitude: lon,
