--- a/views/test.html
+++ b/views/test.html
@@ -77,7 +77,7 @@
     $('#checkin-test').on('click', function(e) {
         var lat = Number($('#lat').val());
         var lon = Number($('#long').val());
-        var authTokenTest = Krishna;
+        var authTokenTest = Jacob;
         $.post('/fb_checkin', {
             latitude: 37.485802 || lat,
             longitude: -122.147011 || lon,
