--- a/views/test.html
+++ b/views/test.html
@@ -82,7 +82,7 @@
             latitude: 37.479874 || lat,
             longitude: -122.152122 || lon,
             authToken: authTokenTest,
-            name: 'Dashi Japanese Restaurant'
+            name: 'Mi Tacqueria'
         }, function(data) {
             console.log(data);
         }, 'json');
